--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Page Title</title>
+<script type="text/javascript" src="processing.js"></script>
 </head>
+
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <canvas data-processing-sources="myProgram.pde"></canvas>
 </body>
+
 </html>
