--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<canvas data-processing-sources="myProgram.pde"></canvas>
+<canvas data-processing-sources="myprocessor.pde"></canvas>
 </body>
 
 </html>
