--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>This is my very first webpage and I couldn't be more excited</p>
 <canvas data-processing-sources="myprocessor.pde"></canvas>
 </body>
 
