--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
+<script type="text/javascript" src="processing.js"></script>
 </head>
 
 <body>
 <h1>Hello World</h1>
 <p>This is my very first webpage and I couldn't be more excited</p>
+<canvas id="theCanvas" data-processing-sources="myprocessor.pde" tabindex="0" width="500" height="500" style="image-rendering: optimizequality !important;"></canvas>
 </body>
 
 </html>
