--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 </head>
 
 <body>
-<h1>Hello World</h1>
+<h1>Merp Lerp</h1>
 <p>This is my very first webpage and I couldn't be more excited</p>
-<canvas id="theCanvas" data-processing-sources="myprocessor.pde" tabindex="0" width="500" height="500" style="image-rendering: optimizequality !important;"></canvas>
-</body>
-
+<canvas data-processing-sources="springs.pde"></canvas>
 </html>
