--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
 <body>
 <h1>Merp Lerp</h1>
-<p>This is my very first webpage and I couldn't be more excited</p>
+<p>This is my very first webpage and I couldn't be more excited to share with you</p>
+
+<!-- Do not display this at the moment
+This is how you commment dumbass
+-->
+
+<canvas data-processing-sources="cellauto.pde"></canvas>
 <canvas data-processing-sources="springs.pde"></canvas>
+<canvas data-processing-sources="tickle.pde"></canvas>
+
 </html>
