--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@ This is how you commment dumbass
 -->
 
 <canvas data-processing-sources="cellauto.pde"></canvas>
+<canvas data-processing-sources="waves.pde"></canvas>
+<canvas data-processing-sources="tree.pde"></canvas>
+<canvas data-processing-sources="smoke.pde"></canvas>
 <canvas data-processing-sources="springs.pde"></canvas>
 <canvas data-processing-sources="tickle.pde"></canvas>
+
 
 </html>
