--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<script type="text/javascript" src="processing.js"></script>
+</head>
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,8 +19,8 @@ body {font-family: "Raleway", Arial, sans-serif}
 
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-    <a href="#" class="w3-left w3-button w3-white">MY ART</a>
-    <a href="#about" class="w3-right w3-button w3-white">About</a>
+    <a href="#" class="w3-left w3-button w3-white">THINGS</a>
+    <a href="#about" class="w3-right w3-button w3-white">--</a>
   </header>
 
   <!-- Photo Grid -->
@@ -31,6 +34,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <div class="w3-half">
       <img src="/images/5.jpg" style="width:100%">
       <img src="/images/6.jpg" style="width:100%">
+      
     </div>
   </div>
   
@@ -42,8 +46,8 @@ body {font-family: "Raleway", Arial, sans-serif}
   <h2>About</h2>
   <img src="/images/1.jpg" class="w3-image w3-padding-32" width="300" height="300">
   <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
-    <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-    <p class="w3-large w3-text-pink">Do not hesitate to contact me!</p>
+    <p>haiku hobbies</p>
+    <p>If you also like haikus and hobbies:</p>
     <div class="w3-section">
       <label><b>Name</b></label>
       <input class="w3-input w3-border" type="text" required name="Name">
