--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ body {font-family: "Raleway", Arial, sans-serif}
       <img src="/images/1.jpg" style="width:100%">
       <img src="/images/2.jpg" style="width:100%">
       <img src="/images/3.jpg" style="width:100%">
+      <canvas data-processing-sources="cellauto.pde"></canvas>
+	  <canvas data-processing-sources="waves.pde"></canvas>
     </div>
 
     <div class="w3-half">
