--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
     <a href="#" class="w3-left w3-button w3-white">THINGS</a>
-    <a href="#about" class="w3-right w3-button w3-white">--</a>
+    <a href="#about" class="w3-right w3-button w3-white">[--]</a>
   </header>
 
   <!-- Photo Grid -->
@@ -45,7 +45,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 <!-- Footer / About Section -->
 <footer class="w3-light-grey w3-padding-64 w3-center" id="about">
-  <h2>About</h2>
+  <h2>[--]</h2>
   <img src="/images/1.jpg" class="w3-image w3-padding-32" width="300" height="300">
   <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
     <p>haiku hobbies</p>
@@ -65,7 +65,6 @@ body {font-family: "Raleway", Arial, sans-serif}
     <button type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
   </form>
   <br>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
  
 </body>
