--- a/index.html
+++ b/index.html
@@ -26,17 +26,21 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid -->
   <div class="w3-row">
     <div class="w3-half">
-      <img src="/images/1.jpg" style="width:100%">
+      <!--<img src="/images/1.jpg" style="width:100%">
       <img src="/images/2.jpg" style="width:100%">
       <img src="/images/3.jpg" style="width:100%">
+      <img src="/images/5.jpg" style="width:100%">
+      <img src="/images/6.jpg" style="width:100%">
+      -->
       <canvas data-processing-sources="cellauto.pde"></canvas>
 	  <canvas data-processing-sources="waves.pde"></canvas>
+	  <canvas data-processing-sources="tree.pde"></canvas>
+	  <canvas data-processing-sources="smoke.pde"></canvas>
+	  <canvas data-processing-sources="springs.pde"></canvas>
+	  <canvas data-processing-sources="tickle.pde"></canvas>
     </div>
 
     <div class="w3-half">
-      <img src="/images/5.jpg" style="width:100%">
-      <img src="/images/6.jpg" style="width:100%">
-      
     </div>
   </div>
   
