added background images

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 	  <canvas data-processing-sources="smoke.pde"></canvas>
 	  <canvas data-processing-sources="springs.pde"></canvas>
 	  <canvas data-processing-sources="tickle.pde"></canvas>
+	  <canvas data-processing-sources="sketch_180723_background_image.pde"></canvas>
     </div>
 
     <div class="w3-half">
