--- a/index.html
+++ b/index.html
@@ -460,7 +460,8 @@
 				// cloth material
 
 				var loader = new THREE.TextureLoader();
-				var clothTexture = loader.load( 'textures/patterns/circuit_pattern.png' );
+				// var clothTexture = loader.load( 'textures/patterns/circuit_pattern.png' );
+				var clothTexture = loader.load( 'textures/patterns/trump.png' );
 				clothTexture.anisotropy = 16;
 
 				var clothMaterial = new THREE.MeshLambertMaterial( {
