update to hierarchy

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				scene.background = new THREE.Color( 0xffffff );
 				
 				var loader = new THREE.TextureLoader();
-				var clothTexture = loader.load( 'textures/patterns/circuit_pattern.png' );
+				var clothTexture = loader.load( 'textures/patterns/trump.png' );
 				clothTexture.anisotropy = 16;
 				
 				var geometry = new THREE.BoxBufferGeometry( 100, 100, 100 );
