--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				for ( var i = 0; i < 1000; i ++ ) {
 
 					// Loop through all images and add to face of cube
-					var texture = new THREE.TextureLoader().load( "images/generation/generation (" + i + ").png" );
+					var texture = new THREE.TextureLoader().load( "images/generation/generation" + i + ".png" );
 					var material = new THREE.MeshBasicMaterial( { color: 0xffffff, map: texture } );
 					// var material = new THREE.MeshPhongMaterial( { color: 0xffffff, map: texture, shininess: 30 } );			
 					
