--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
+		<style>
+		    body { margin: 0; }
+		    canvas { width: 100%; height: 100% }
+		</style>
 	</head>
 	<body>
 
@@ -154,6 +158,8 @@
 			}
 
 		</script>
+
+		<p>Hello!</p>
 
 	</body>
 </html>
